input-device: consider dropping vendor/product IDs
These aren't super useful without the bus type. Compositors can fish back this information from the libinput device if they want to.
These two fields are mainly used in wlroots to forward the USB IDs via zwp_tablet_v2.id
. If we want this to continue working via the Wayland backend, we'll probably need to move these fields to the tablet struct. And probably make it clear that the fields should be left zero'ed for anything other than USB.
Also see: