backend/libinput/pointer.c
@@ -11,8 +11,6 @@ void init_device_pointer(struct wlr_libinput_input_device *dev) {
 	const char *name = get_libinput_device_name(dev->handle);
 	struct wlr_pointer *wlr_pointer = &dev->pointer;
 	wlr_pointer_init(wlr_pointer, &libinput_pointer_impl, name);
-	wlr_pointer->base.vendor = libinput_device_get_id_vendor(dev->handle);
-	wlr_pointer->base.product = libinput_device_get_id_product(dev->handle);
 }
 
 struct wlr_libinput_input_device *device_from_pointer(
