backend/libinput/switch.c
@@ -11,8 +11,6 @@ void init_device_switch(struct wlr_libinput_input_device *dev) {
 	const char *name = get_libinput_device_name(dev->handle);
 	struct wlr_switch *wlr_switch = &dev->switch_device;
 	wlr_switch_init(wlr_switch, &libinput_switch_impl, name);
-	wlr_switch->base.vendor = libinput_device_get_id_vendor(dev->handle);
-	wlr_switch->base.product = libinput_device_get_id_product(dev->handle);
 }
 
 struct wlr_libinput_input_device *device_from_switch(
