backend/libinput/tablet_tool.c
@@ -20,8 +20,6 @@ void init_device_tablet(struct wlr_libinput_input_device *dev) {
 	const char *name = get_libinput_device_name(dev->handle);
 	struct wlr_tablet *wlr_tablet = &dev->tablet;
 	wlr_tablet_init(wlr_tablet, &libinput_tablet_impl, name);
-	wlr_tablet->base.vendor = libinput_device_get_id_vendor(dev->handle);
-	wlr_tablet->base.product = libinput_device_get_id_product(dev->handle);
 	wlr_tablet->usb_vendor_id = libinput_device_get_id_vendor(dev->handle);
 	wlr_tablet->usb_product_id = libinput_device_get_id_product(dev->handle);
 
