backend/wayland/tablet_v2.c
@@ -813,8 +813,6 @@ static void handle_tablet_id(void *data, struct zwp_tablet_v2 *zwp_tablet_v2,
 	struct wlr_wl_seat *seat = data;
 	struct wlr_tablet *tablet = &seat->wlr_tablet;
 
-	tablet->base.vendor = vid;
-	tablet->base.product = pid;
 	tablet->usb_vendor_id = vid;
 	tablet->usb_product_id = pid;
 }
